# icp-sns

./: .gitignore  Cargo.toml  README.md  dfx.json  ic-icrc1-archive.wasm  ic-icrc1-index.wasm  ic-icrc1-ledger.wasm  package-lock.json  package.json  register-generic-functions.json  register.json  sns-governance-canister.wasm  sns-root-canister.wasm  sns-swap-canister.wasm  sns_canister_ids.json  webpack.config.js
scripts/sns/proposals/: motion.json  register-generic-functions.json  register.json  update_user_canister.sh
src/dynamic_canisters_backend/: Cargo.toml  dynamic_canisters_backend.did
src/dynamic_canisters_backend/src/: lib.rs
src/dynamic_canisters_frontend/src/: index.html  index.js
src/user_canister/: Cargo.toml  user_canister.did
src/user_canister/src/: lib.rs
user-canister-wasm-service/: app.js  localhost-key.pem  localhost.pem  package-lock.json  package.json
user-canister-wasm-service/public/: user_canister.wasm
