[package]
name = "dynamic_canisters_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.21.2"
ic-cdk = "0.8.1"
ic-certified-map = "0.3.0"
candid = "0.8"
lazy_static = "1.4.0"
libflate = "1"
num-traits = "0.2.14"
serde = "1.0.116"
serde_cbor = "0.11"
serde_bytes = "0.11"
serde_with = "3.0.0"
indexmap = "1.7.0"
sha2 = "0.10.2"
regex = "1"
ic-cdk-macros = "0.6.10"

[build-dependencies]
sha2 = "0.10.2"